# gcp-utils

./: LICENSE  gitignore  pyproject.toml  setup.py
src/: __init__.py  gcp_stop_vm.py
