[project]
name = "GCPUTILS"
version = "0.0.1"
authors = [
  { name="David C. Istrati", email="dcistr26@colby.edu" },
]
description = "Util functions for google cloud platform"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2 License",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"